--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     <li><a href="quem-somos">Quem Somos</a></li>
                     <li><a href="anuncie-aqui">Anuncie Aqui</a></li>
                     <li><a href="contato">Contato</a></li>
+                    <li><a href="contato">Sobre</a></li>
                 </ul>
             </div>
             <div class="toporight">
@@ -43,7 +44,9 @@
     </div>
     <div class="menu">
         <div class="menuint">
-            <ul>
+            <img src="assets/images/menu.png" border="0" width="40" height="40" class="menumobile"
+            onclick="toggleMenu()" />
+            <ul id="menu">
                 <li><a href="./" class="ativo">Home</a></li>
                 <li><a href="./">Economia</a></li>
                 <li>
